tests/ui/const-generics/mgca/wrapped_array_elem_type_mismatch.stderr
error: the literal is not of type `u8`
  --> $DIR/wrapped_array_elem_type_mismatch.rs:7:47
   |
LL |     let _: ArrWrap<{ [1_u8] }> = ArrWrap::<{ [1_u16] }>;
   |                                               ^^^^^ expected `u8`, found `u16`

error: aborting due to 1 previous error

